tests/ui/basic/while_non_bool.rs
use metamatch::eval;

// while with non-bool condition
fn main() {
    eval! {
        while "hello" {
            break;
        }
    };
}
